asset tweaks and code cleaning, removed DatagenTags.java to prioritise JSON tags for convenience and clarity purposes